# zapierProject

./: .gitignore  README.md  main.py  prd.json  pyproject.toml  requirements.txt
api/: __init__.py
api/mcp_exposer/: __init__.py  server.py
core/: __init__.py  app_runtime.py  models.py
core/errors/: __init__.py  simulator.py
core/state/: __init__.py  engine.py
core/triggers/: __init__.py  system.py
examples/: __init__.py  basic_usage.py
scripts/: __init__.py  generate_universe.py
tests/: __init__.py
tools/: __init__.py  create_example_apps.py
tools/schema_generator/: __init__.py  app_generator.py  schema_builder.py
tools/universe_scaler/: __init__.py  scaler.py
universe/: __init__.py  app_loader.py  config.py  universe_config.example.json
universe/generator/: __init__.py  randomizer.py  registry_manager.py
